--- a/templates/collection.32.liquid
+++ b/templates/collection.32.liquid
@@ -20,9 +20,11 @@
     {% if collection.products.size > 0 %}
     <div class="cat-grid row">
       {% for product in collection.products %}
+      {% if product.type != 'Free' %}
       <div class="product_item animated">
         {% include 'product-item' %}
       </div>
+      {% endif %}
       {% endfor %}
     </div>
     {% else %}
